[package]
name = "transparent"
version = "0.3.0"
description = "A crate for running processes on a virtual desktop / virtual X server environment."
readme = "README.md"
repository = "https://github.com/OpenByteDev/transparent" 
documentation = "https://docs.rs/transparent"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2018"
build = "build.rs"
keywords = ["headless", "hidden", "process", "virtual", "desktop"]

[dependencies]
delegate = "0.6"

[target.'cfg(windows)'.dependencies]
tempfile = "3.2"

[target.'cfg(windows)'.build-dependencies]
build-target = "0.3"
cargo-emit = "0.2"
gitignore = "1.0"
walkdir = "2.3"
tempfile = "3.2"
path-absolutize = "3.0"

[features]
default = []
expose-impl = []
__docs_rs = []

[package.metadata.docs.rs]
features = ["__docs_rs"]
