[package]
name = "transparent"
version = "0.4.1"
description = "A crate for running processes on a virtual desktop / virtual X server environment."
readme = "README.md"
repository = "https://github.com/OpenByteDev/transparent" 
documentation = "https://docs.rs/transparent"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
keywords = ["headless", "hidden", "process", "virtual", "desktop"]

[dependencies]
delegate = "0.13"

[target.'cfg(windows)'.dependencies]
tempfile = "3.20"

[target.'cfg(windows)'.build-dependencies]
build-target = "0.8"
cargo-emit = "0.2"
gitignore = "1.0"
walkdir = "2.5"
tempfile = "3.20"
path-absolutize = "3.1"

[features]
default = []
expose-impl = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
